<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="50dp"
    android:orientation="vertical"
    android:background="@drawable/custom_border">

        <!--TITLE-->
        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"/>

        <!--STUDENT-->
        <Button
            android:id="@+id/btn_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mainStudent_name"/>

        <!--TEACHER-->
        <Button
            android:id="@+id/btn_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mainTeacher_name"/>

        <!--EXIT-->
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:text="@string/mainExit_name"/>

</LinearLayout>