<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="50dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="0dp"
            android:background="@drawable/custom_border"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:isScrollContainer="true"
            tools:context=".StudentForgotPasswordActivity">

            <!--TITLE-->
            <TextView
                android:id="@+id/lbl_loginStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/registerStudent_name"
                android:textSize="25sp" />

            <!--NAME-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_name"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:ems="20" />

                </RelativeLayout>

            </LinearLayout>

            <!--EMAIL-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40">

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_name"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:ems="20" />

                </RelativeLayout>

            </LinearLayout>

            <!--PASSWORD-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40">

                    <TextView

                        android:id="@+id/tv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_name"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:inputType="textPassword"
                        android:ems="20" />
                </RelativeLayout>

            </LinearLayout>

            <!--GENDER-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:paddingVertical="10dp">

                    <TextView

                        android:id="@+id/tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_name"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RadioGroup
                    android:id="@+id/radio_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:layout_weight="60">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/male_name" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/female_name" />
                </RadioGroup>

            </LinearLayout>

            <!--PHONE-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40">

                    <TextView

                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_name"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60">

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:ems="20" />
                </RelativeLayout>

            </LinearLayout>

            <!--SCHOOL-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40">

                    <TextView

                        android:id="@+id/tv_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school_name"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60">

                    <EditText
                        android:id="@+id/et_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:ems="20" />
                </RelativeLayout>

            </LinearLayout>

            <!--LEVEL-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:paddingVertical="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40">

                    <TextView

                        android:id="@+id/tv_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_name"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RadioGroup
                    android:id="@+id/radio_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:layout_weight="60">

                    <RadioButton
                        android:id="@+id/radio_junior"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/junior_name" />

                    <RadioButton
                        android:id="@+id/radio_high"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/high_name" />
                </RadioGroup>

            </LinearLayout>

            <!--CLASS-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:paddingVertical="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40">

                    <TextView

                        android:id="@+id/tv_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/class_name"
                        android:textSize="15sp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60">
                    <Spinner
                        android:id="@+id/sp_class"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Spinner>
                </RelativeLayout>
            </LinearLayout>

            <!--SUBMIT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/submit_name" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
