<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".StudentForgotPasswordActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="50dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:background="@drawable/custom_border">

            <TextView
                android:id="@+id/lbl_loginStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword_name"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/email_name"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <EditText
                        android:layout_centerHorizontal="true"
                        android:id="@+id/et_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="20" />

                </RelativeLayout>

            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/tv_recovery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:text="@string/recovery_name"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <EditText
                        android:layout_centerHorizontal="true"
                        android:id="@+id/et_recovery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="20" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/tv_newPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:text="@string/newPassword_name"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <EditText
                        android:layout_centerHorizontal="true"
                        android:id="@+id/et_newPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="20" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50">
                    <TextView

                        android:id="@+id/tv_confirmNewPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/confirmNewPassword_name"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">
                    <EditText
                        android:layout_centerHorizontal="true"
                        android:id="@+id/et_confirmNewPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="20" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:paddingVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">
                    <Button
                        android:layout_centerHorizontal="true"
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit_name"/>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>